Fix URL in meta refresh and link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://docs.englacial.org/xopr">
+    <meta http-equiv="refresh" content="0;url=https://docs.englacial.org/xopr/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <style>
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <h1>Redirecting...</h1>
-        <p>If you are not redirected automatically, <a href="https://docs.englacial.org/xopr">click here</a>.</p>
+        <p>If you are not redirected automatically, <a href="https://docs.englacial.org/xopr/">click here</a>.</p>
     </div>
 </body>
 </html>
